--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 :root{
-    --bg : #0F8F8F;
+    --bg : #0B1548;
+    --cor-texto: #fffffff;
+    --cor-container: #ffffff;
 }
 
 *{
@@ -17,9 +19,15 @@ body{
     overflow-x: hidden;
 }
 
+.logo{
+    width: 20vw;
+    margin-bottom: 3vw;
+}
+
 .container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center ;
     position: absolute;
     z-index: 1;
@@ -32,10 +40,10 @@ form{
     margin-top: 2vw;
     color: var(--bg);
     padding: 1vw;
-    background-color: white;
+    background-color: var(--cor-container);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     gap: 0.4vw;
     border-radius: 4px;
@@ -47,7 +55,7 @@ input{
     outline: none;
     height: 1.5vw;
     width: 100%;
-    color: var(--bg);
+    color: var(--cor-texto);
 }
 
 label{
@@ -56,7 +64,7 @@ label{
 
 button{
     margin-top: 2vw;
-    color: white;
+    color: var(--cor-container);
     border: none;
     background-color: var(--bg);
     height: 1.5vw;
@@ -69,6 +77,24 @@ button{
     color: var(--bg);
     font-weight: bold;
 
+}
+
+
+.msg{
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+    padding: 0vw 2vw;
+    align-items: center;
+
+}
+
+.msg img{
+    width: 10vw;
+}
+
+.msg button{
+    width: 10vw;
 }
 
 .screen-logged{
@@ -103,3 +129,29 @@ iframe{
     margin-bottom: 0.5vw;
 }
 
+
+
+@media (max-width: 768px) {
+    form{
+        width: 100vw;
+        height: 100vh;
+        margin: 0vw;;
+    }
+
+    .logo{
+        width: 50vw;
+    }
+
+    input{
+        outline: none;
+        height: 8vw;
+        width: 80%;
+        color: var(--cor-texto);
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+}
