--- a/style.css
+++ b/style.css
@@ -142,6 +142,65 @@ iframe{
 
 /* ---------------------------------------------------- */
 
-/* @media (max-width: 768px) {
+@media (max-width: 900px) {
 
-} */
+    .form{
+        justify-content: space-around;
+        height: 100vh;
+        width: 100vw;
+        border: none;
+        margin: 0;
+    }
+
+    .form img{
+        width: 50vw;
+        margin-top: 30vw;
+    }
+
+    label{
+        font-weight: bold;
+        font-size: 8vw;
+    }
+
+    input{
+        outline: none;
+        height: 8vw;
+        width: 100%;
+        color: var(--cor-texto);
+    } 
+    
+    button{
+        border: none;
+        height: 10vw;
+        width: 40%;
+        border-radius: 3px;
+    }
+
+    iframe{
+        height: 105vh;
+        width: 100vw;
+        border: none; 
+    }
+
+    .msg{
+        display: flex;
+        justify-content: space-between;
+        width: 100vw;
+        height: 10vw;
+        padding: 0vw 2vw;
+    }
+
+    .exit-btn{
+        width: 30vw;
+        height: 7vw;
+    }
+
+    #logged-message{
+        display: none;
+    }
+
+    .msg img{
+        width: 30vw;
+    }
+    
+}
