--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ form{
     align-items: center;
     gap: 0.4vw;
     border-radius: 4px;
-    width: 25vw;
-    height: 50vh;
+    width: 30vw;
+    height: 40vw;
 }
 
 input{
@@ -75,6 +75,10 @@ button{
     border: none;
     background-color: var(--bg);
     height: 2vw;
+    padding: 1vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 40%;
     border-radius: 3px;
     margin-bottom: 1vw;
