--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,8 @@ header {
     text-transform: uppercase;
     font-weight: bold;
     border: none;
+    cursor: pointer;
+    z-index: 999999;
 }
 
 .btn a{
