--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,20 +57,18 @@ header {
 .btn{
     background-color: var(--color-btn);
     color: var(--color-text);
-    padding: 0.5vw 1.5vw;
+    padding: 0.2vw;
+    width: 5vw;
     border-radius: 5px;
     text-transform: uppercase;
     font-weight: bold;
     border: none;
+    text-decoration: none;
     cursor: pointer;
+    font-size: var(--font-size);
     z-index: 999999;
 }
 
-.btn a{
-    text-decoration: none;
-    color: #fff;
-    font-size: var(--font-size);
-}
 
 .container {
     display: flex;
