--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,9 +72,9 @@ header {
 
 .container {
     display: flex;
+    justify-content: center;
     width: 90%;
     height: 100vh;
-    max-width: 1200px;
     margin: auto;
     align-items: center;
 }
@@ -83,7 +83,6 @@ header {
     display: flex;
     width: 90%;
     height: 100vh;
-    max-width: 1200px;
     margin: auto;
     flex-direction: column;
     align-items: center;
