--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,7 +72,7 @@ header {
 
 .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     width: 90%;
     height: 100vh;
     margin: auto;
