--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ body {
 
 header {
     background-color: var(--bg);
-    padding: 0.3vw 3vw;
+    padding: 0.3vw 7vw;
     position: fixed;
     display: flex;
     justify-content: space-between;
@@ -73,7 +73,7 @@ header {
 .container {
     display: flex;
     justify-content: space-around;
-    width: 90%;
+    max-width: 90vw;
     height: 100vh;
     margin: auto;
     align-items: center;
@@ -105,14 +105,12 @@ header {
 }
 
 .hero-content h2 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
+    font-size: 2vw;
+    margin-bottom: 2vw;
 }
 
-.hero-content p {
+.container span{
     color: var(--color-btn);
-    font-size: 1.2rem;
-    margin-bottom: 4vw;
 }
 
 .btn-primary {
@@ -163,15 +161,60 @@ header {
     color: #cfcfcf;
 }
 
-.features {
-    padding: 4rem 0;
+.vantagens{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    height: 100vh;
+    margin-top: 19vw;
 }
+
+.container-vantagens{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    gap: 3vw;
+    max-width: 80vw;
+    margin-bottom: 6vw;
+}
+
+.vantagens h2 {
+    color: var(--color-h2);
+    font-size: 1.5vw;
+    margin-bottom: 2vw;
+}
+
+.vantagens h2 span{
+    color: var(--color-btn);
+}
+
+
+.div1{
+    height: 20vw;
+    width: 50vw;
+    align-items: center;
+}
+
+.div2{
+    display: flex;
+    height: 20vw;
+    width: 50vw;
+    align-items: center;
+    text-align: justify;
+
+}
+
+
+
+
 
 
 .footer {
     background-color: #0d111d;
     padding: 1rem 0;
-    text-align: center;
+    text-align: left;
     border-top: 1px solid #1a1f2e;
 }
 
