--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,7 +88,7 @@ header {
     display: flex;
     justify-content: space-around;
     max-width: 90vw;
-    height: 50vh;
+    height: 100vh;
     margin: auto;
     align-items: center;
 }
@@ -168,8 +168,6 @@ header {
     justify-content: center;
     text-align: center;
     align-items: center;
-    height: 100vh;
-    margin-top: 19vw;
 }
 
 .container-vantagens{
@@ -178,13 +176,13 @@ header {
     text-align: center;
     gap: 3vw;
     max-width: 80vw;
-    margin-bottom: 6vw;
+    margin-bottom: 10vw;
 }
 
 .vantagens h2 {
     color: var(--color-h2);
     font-size: 1.5vw;
-    margin-bottom: 3vw;
+    margin-bottom: 2vw;
 }
 
 .vantagens h2 span{
@@ -200,6 +198,7 @@ header {
 
 .div2{
     display: flex;
+    flex-direction: column;
     height: 20vw;
     width: 50vw;
     align-items: center;
