--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@ body {
     line-height: 1.6;
     color: var(--color-text);
     background-color: var(--bg);
+    height: 100vh;
 }
 
 header {
@@ -70,7 +71,6 @@ header {
 }
 
 
-
 .hero {
     display: flex;
     justify-content: space-between;
@@ -102,7 +102,6 @@ header {
     flex-direction: column;
     align-items: center;
 }
-
 
 
 .hero-content h2 {
@@ -166,7 +165,6 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
     align-items: center;
 }
 
@@ -174,9 +172,9 @@ header {
     display: flex;
     justify-content: space-between;
     text-align: center;
-    gap: 3vw;
+    height: 30vw;
     max-width: 80vw;
-    margin-bottom: 10vw;
+
 }
 
 .vantagens h2 {
@@ -199,17 +197,13 @@ header {
 .div2{
     display: flex;
     flex-direction: column;
-    height: 20vw;
-    width: 50vw;
+    justify-content: space-around;
     align-items: center;
     text-align: justify;
-
 }
 
 .img-projeto{
     width: 30vw;
-
-
 }
 
 .btn-project{
@@ -217,9 +211,10 @@ header {
     color: #fff;
     font-size: 0.9vw;
     border-radius: 5px;
-    padding: 0.3vw 1vw;
+    padding: 0.5vw 1vw;
     text-transform: uppercase;
     font-weight: bold;
+    border: none;
     text-decoration: none;
 }
 
