--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,6 @@ body {
     line-height: 1.6;
     color: var(--color-text);
     background-color: var(--bg);
-    height: 100vh;
 }
 
 header {
@@ -161,70 +160,14 @@ header {
     color: #cfcfcf;
 }
 
-.vantagens{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.container-vantagens{
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    height: 30vw;
-    max-width: 80vw;
-
-}
-
-.vantagens h2 {
-    color: var(--color-h2);
-    font-size: 1.5vw;
-    margin-bottom: 2vw;
-}
-
-.vantagens h2 span{
-    color: var(--color-btn);
-}
 
 
-.div1{
-    height: 20vw;
-    width: 50vw;
-    align-items: center;
-}
-
-.div2{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    text-align: justify;
-}
-
-.img-projeto{
-    width: 30vw;
-}
-
-.btn-project{
-    background-color: var(--color-btn);
-    color: #fff;
-    font-size: 0.9vw;
-    border-radius: 5px;
-    padding: 0.5vw 1vw;
-    text-transform: uppercase;
-    font-weight: bold;
-    border: none;
-    text-decoration: none;
-}
-
-
-
+/* ---------------------------------------------------------------------------- */
 
 .footer {
     background-color: #0d111d;
     padding: 1rem 0;
-    text-align: left;
+    text-align: center;
     border-top: 1px solid #1a1f2e;
 }
 
